crates/wdl-grammar/tests/parsing/version-invalid/source.wdl
# This is a test of a version statement with a syntactically-invalid version.

version 1-DEVEL.~bad~
